--- a/huttons-razor/huttons-razor.cabal
+++ b/huttons-razor/huttons-razor.cabal
@@ -20,7 +20,11 @@ library
   exposed-modules:     HuttonsRazor
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.11 && <4.12
+  build-depends:
+                       base >=4.11 && <4.12
+                     , parsec == 3.1.*
+                     , parsers == 0.12.*
+                     , text == 1.2.*
   hs-source-dirs:      lib
   default-language:    Haskell2010
 
