--- a/huttons-razor/huttons-razor.cabal
+++ b/huttons-razor/huttons-razor.cabal
@@ -18,6 +18,7 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     HuttonsRazor
+                     , Rules
   -- other-modules:
   -- other-extensions:
   build-depends:
