--- a/huttons-razor/huttons-razor.cabal
+++ b/huttons-razor/huttons-razor.cabal
@@ -35,5 +35,20 @@ executable huttons-razor
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.11 && <4.12
+                     , huttons-razor
   hs-source-dirs:      src
   default-language:    Haskell2010
+  ghc-options:         -Wall -threaded -Wredundant-constraints
+
+test-suite tasty
+  type:                exitcode-stdio-1.0
+  main-is:             Main.hs
+  build-depends:       base >=4.11 && <4.12
+                     , hedgehog == 0.6.*
+                     , huttons-razor
+                     , tasty == 1.1.*
+                     , tasty-hedgehog == 0.2.*
+  other-modules:       HuttonsRazorTest
+  hs-source-dirs:      test
+  default-language:    Haskell2010
+  ghc-options:         -Wall -threaded -Wredundant-constraints
