--- a/huttons-razor/huttons-razor.cabal
+++ b/huttons-razor/huttons-razor.cabal
@@ -25,6 +25,7 @@ library
   -- other-extensions:
   build-depends:
                        base >=4.11 && <4.12
+                     , lens == 4.16.*
                      , mtl == 2.2.*
                      , parsec == 3.1.*
                      , parsers == 0.12.*
