Smash my way to compiling.

--- a/huttons-razor/huttons-razor.cabal
+++ b/huttons-razor/huttons-razor.cabal
@@ -20,7 +20,7 @@ library
   exposed-modules:
                        Evaluator
                      , HuttonsRazor
-                     , Rules
+                     , Types
   -- other-modules:
   -- other-extensions:
   build-depends:
