Replace TH with dumped splices.
The generated code was giving warnings, so opted to dump the generated code and
fix them.

--- a/huttons-razor/huttons-razor.cabal
+++ b/huttons-razor/huttons-razor.cabal
@@ -18,7 +18,8 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:
-                       Evaluator
+                       Error
+                     , Evaluator
                      , HuttonsRazor
                      , Types
   -- other-modules:
